fix(mcp): enforce exact proposal step shapes